// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appended to an element (JSX) 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "position": "relative",
      "width": "100px",
    }
  }
>
  <Ripple />
</div>
`;

exports[`No options 1`] = `
<div
  className="pe-ripple    "
/>
`;

exports[`No options 2`] = `
<div
  className="pe-ripple    "
/>
`;

exports[`Option: center (JSX) 1`] = `
<Ripple
  center={true}
/>
`;

exports[`Option: class 1`] = `
<div
  className="pe-ripple    class-x"
/>
`;

exports[`Option: className 1`] = `
<div
  className="pe-ripple    className-x"
/>
`;

exports[`Option: element 1`] = `
<a
  className="pe-ripple    "
/>
`;

exports[`Option: id 1`] = `
<div
  className="pe-ripple    "
  id="id-x"
/>
`;

exports[`Themed (should be red and permanent) (JSX) 1`] = `
<Ripple
  className="react-ripple-themed-ripple"
  endOpacity={1}
  persistent={true}
/>
`;
